-generate price
-add background, pixel stars
-basic melee